Fixes color contrast issues as well as syntax highlighting declarations througout the workshop.

--- a/framework/sass/_workshop.scss
+++ b/framework/sass/_workshop.scss
@@ -2,7 +2,7 @@
 ------------------------------------*/
 .slide.intro {
   background: linear-gradient(rgba($black, 0.7),
-              rgba($black, 0.7)), 
+              rgba($black, 0.7)),
               url(../img/banner-home1.jpg) no-repeat;
   background-size: cover;
 }
@@ -29,7 +29,7 @@
 /* A Basic Web Page */
 .basic-web-page {
 	.css {
-		color: #27ae60;
+		color: green;
 		font-weight: bold;
 
 		span {
@@ -42,10 +42,31 @@
   .hljs span {
     // line-height: 1.5;
     font-size: 23px;
-  } 
+  }
   .hljs-comment {
     color: #777;
   }
+}
+
+.hljs {
+    border: 1px solid $gray;
+}
+
+.hljs-comment {
+  color: green;
+}
+
+.hljs-doctype {
+  color: #000080;
+}
+
+.hljs-attribute,
+.hljs-number {
+  color: #027d7d;
+}
+
+.subject {
+  border: solid 1px $gray;
 }
 
 .slide.background {
@@ -56,7 +77,7 @@
 .slide.final {
   background: url(../img/workshop/crazy-cat.jpg) 50%;
    text-align: center;
-  
+
   h1 {
     background: rgba(black, 0.8);
     display: inline-block;
@@ -66,4 +87,3 @@
 .forms .example {
   padding: 10px;
 }
-
